--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,100 @@
-/* No CSS *//*# sourceMappingURL=main.css.map */
+:root {
+  --primary-color: #007aF3;
+}
+
+body {
+  background: #F2F2F2;
+  margin: 0;
+  font-family: poppins;
+}
+
+.navbar {
+  background: white;
+  padding: 1em;
+}
+
+.navbar .logo {
+  text-decoration: none;
+  font-weight: bold;
+  color: black;
+  font-size: 1.2em;
+}
+
+.navbar .logo span {
+  color: var(--primary-color);
+}
+
+.navbar nav {
+  display: none;
+}
+
+.navbar .container {
+  display: flex;
+  place-content: space-between;
+}
+
+.navbar .mobile-menu {
+  cursor: pointer;
+}
+
+a {
+  color: #444444;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+section {
+  padding: 5em 2em;
+}
+
+section .hero {
+  text-align: center;
+}
+
+section .left-col {
+  text-transform: uppercase;
+  font-weight: bold;
+  color: grey;
+  letter-spacing: .3em;
+}
+
+section h1 {
+  font-size: 2.5em;
+  line-height: 1.3em;
+  margin-top: .2em;
+}
+
+section .primary-cta {
+  background: var(--primary-color);
+  color: white;
+  text-decoration: none;
+  padding: .6em 1.3em;
+  font-size: 1.4em;
+  border-radius: 5em;
+  font-weight: bold;
+  display: inline-block;
+}
+
+section .watch-video-cta {
+  display: block;
+  margin-top: 1em;
+}
+
+section .watch-video-cta img {
+  margin-right: .5em;
+}
+
+section .hero-img {
+  width: 70%;
+  margin-top: 3em;
+}
+
+section section.features-section {
+  background-color: #20272E;
+  color: white;
+}
+/*# sourceMappingURL=main.css.map */
