--- a/css/main.scss
+++ b/css/main.scss
@@ -22,6 +22,7 @@ body {
              color: var(--primary-color);
           }
      }
+
      nav {
        display: none;
      }
@@ -30,70 +31,73 @@ body {
         display: flex;
         place-content: space-between;
      }
+     
      .mobile-menu {
           cursor:pointer;
 
      }
 }
 
-a{
+a {
      color: #444444;
 }
 
 ul{
-     list-style: none;
-     margin: 0;
-     padding: 0;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 section {
-     padding: 5em 2em;
-
-.hero{
-     text-align: center;
+   padding: 5em 2em;
 }
+
+.hero {
+     text-align:center;
+}
+
 .left-col{
-     text-transform: uppercase;
-     font-weight:bold;
-     color:grey ;
-     letter-spacing: .3em;
-}
-h1{
-      font-size: 2.5em;
-     line-height: 1.3em;
-     margin-top: .2em;
-}
 
-.primary-cta{
-     background: var(--primary-color);
-     color: white;
-     text-decoration: none;
-     padding: .6em 1.3em;
-     font-size: 1.4em;
-     border-radius: 5em;
-     font-weight: bold;
-     display: inline-block;
-}
+     .subhead{
+        text-transform: uppercase;
+        font-weight:bold;
+        color:grey ;
+        letter-spacing: .3em;
+     }
+     
+     h1 {
+         font-size: 2.5em;
+         line-height: 1.3em;
+         margin-top: .2em;
+     }
+
+
+     .primary-cta{
+        background: var(--primary-color);
+        color: white;
+        text-decoration: none;
+        padding: .6em 1.3em;
+        font-size: 1.4em;
+        border-radius: 5em;
+        font-weight: bold;
+        display: inline-block;
+     }
 
 
      .watch-video-cta{
-       display: block;
-       margin-top: 1em;
+        display: block;
+        margin-top: 1em;
 
        img{
-          margin-right: .5em;
-       }
+            margin-right: 1em;
+          }
      }
+}
 
 .hero-img{
       width: 70%;
       margin-top: 3em;
 }
-
- section.features-section{
-     background-color: #20272E;
-     color: white;
-}
-
-}
-
+      .section.features-section{
+          color: white;
+       }
