--- a/css/main.scss
+++ b/css/main.scss
@@ -1,5 +1,5 @@
 :root{
-     --primary-color: #007aF3;
+     --primary-color: #007AF3;
 }
 
 body {
@@ -88,16 +88,72 @@ section {
         display: block;
         margin-top: 1em;
 
-       img{
-            margin-right: 1em;
-          }
+       img  {
+            margin-right: .5em;
+          }     
      }
 }
 
-.hero-img{
-      width: 70%;
-      margin-top: 3em;
+.hero-img {
+    width: 70%;
+    margin-top: 3em;
 }
-      .section.features-section{
-          color: white;
-       }
+
+section.features-section {
+     background: #20272E;
+     color: #ffffff; 
+     
+}
+
+ul.features-list {
+     margin: 0;
+     padding-left: 1em;
+     //come back to this
+     
+     li {
+        font-size: 1.1em;
+        margin-bottom: 1em;
+        margin-left: 2em;
+        position: relative;
+
+        &:before{
+             content:'';
+             left: -2em;
+             position: absolute;
+             width:20px;
+             height: 20px;
+             background-image: url('../images/bullet.svg');
+             background-size: contain;
+             margin-right: .5em;
+
+          }
+     }  
+}
+
+.features-section img{
+     display: none;
+}
+
+.testimonials-section{
+     background: var(--primary-color);
+
+
+          li{
+             background: #006BD6;
+             text-align: center;
+             padding: 2em 1em;
+             width: 80%;
+             margin: 0 auto 5em auto;
+             border-radius: 1em;
+
+               img{
+                 width: 5em;
+                 height: 5em;
+                 
+              
+              
+               }
+          
+          }
+     
+}
