--- a/css/main.scss
+++ b/css/main.scss
@@ -1,4 +1,4 @@
-:root{
+ :root{
      --primary-color: #007AF3;
 }
 
@@ -23,6 +23,7 @@ body {
           }
      }
 
+
      nav {
        display: none;
      }
@@ -34,7 +35,6 @@ body {
      
      .mobile-menu {
           cursor:pointer;
-
      }
 }
 
@@ -53,14 +53,14 @@ section {
 }
 
 .hero {
-     text-align:center;
+     text-align: center; 
 }
 
 .left-col{
 
      .subhead{
         text-transform: uppercase;
-        font-weight:bold;
+        font-weight: bold;
         color:grey ;
         letter-spacing: .3em;
      }
@@ -101,13 +101,13 @@ section {
 
 section.features-section {
      background: #20272E;
-     color: #ffffff; 
+     color: white; 
      
 }
 
 ul.features-list {
      margin: 0;
-     padding-left: 1em;
+     padding-left: .1em;
      //come back to this
      
      li {
@@ -136,7 +136,7 @@ ul.features-list {
 
 .testimonials-section{
      background: var(--primary-color);
-
+     color: white;
 
           li{
              background: #006BD6;
@@ -149,11 +149,99 @@ ul.features-list {
                img{
                  width: 5em;
                  height: 5em;
-                 
-              
+                 border: 5px solid #006BD6;
+                 border-radius: 50%;
+                 margin-top: -4.5em;
               
                }
           
           }
      
+}
+
+
+h2{
+   font-size: 2em;
+}
+
+label{
+     display: block;
+     font-size: 1.2em;
+     margin-bottom: .5em;
+
+}
+
+input, textarea{
+    width: 100%;
+    padding: .8em;
+    margin-bottom: 1em;
+    border-radius: .3em;
+    border: 1px solid gray;
+    box-sizing: border-box;
+    
+}
+
+.send-message-cta{
+     background-color: var(--primary-color);
+     color: white;
+     font-weight: bold;
+     font-size: 1.3em;
+     border: none;
+     margin-bottom: 5em;
+     border-radius: 5em;
+     display: inline-block;
+     padding: .8em 2em;
+     width: unset;
+     cursor: pointer;
+}
+
+iframe{
+     width: 100%;
+     height: 300px;
+}
+
+
+nav.menu-btn{
+     display: block;
+}
+
+nav.menu-btn{
+     display: block;
+}
+nav{
+     position: fixed;
+     z-index: 999;
+     width: 66%;
+     right: 0;
+     top: 0;
+     background: #20272E;
+     height: 100vh;
+     padding: 1em;
+
+   ul.primary-nav{
+        margin-top: 5em;
+   }    
+
+   li{
+
+      a {
+           color: white;
+           text-decoration: none;
+           display: block;
+           padding: .5em;
+           font-size: 1.3em;
+           text-align: right;
+
+           &:hover{
+                font-weight: bold;
+           }
+      }
+   }
+
+}
+
+.mobile-menu-exit{
+     float: right;
+     margin: .5em;
+     cursor: pointer;
 }
